docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ENERGY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_FORCE_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_LENGTH_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_MAG_DIPOLE_MOM_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_MAG_FLUX_DENSITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_MAGNETIZABILITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_MASS_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_MOMENTUM_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_PERMITTIVITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_TIME_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_VELOCITY_2018;
ADD_IMPORT extern const cct AVOGADRO_CONSTANT_2018;
ADD_IMPORT extern const cct BOHR_MAGNETON_2018;
ADD_IMPORT extern const cct BOHR_MAGNETON_IN_EV_T_2018;
ADD_IMPORT extern const cct BOHR_MAGNETON_IN_HZ_T_2018;