src/codata_constants_2018_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018") ::&
capi_30_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "q", "u", "a", "d", "r", "u", &
"p", "o", "l", "e", " ", "m", "o", "m", ".", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018%value, &
ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2018%uncertainty, &
[ &
"C", " ", "m", "^", "2", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ENERGY_2018") ::&
capi_31_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "n", "e", "r", "g", &
"y", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ENERGY_2018%value, &
ATOMIC_UNIT_OF_ENERGY_2018%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_FORCE_2018") ::&
capi_32_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "f", "o", "r", "c", "e", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_FORCE_2018%value, &
ATOMIC_UNIT_OF_FORCE_2018%uncertainty, &
[ &
"N", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_LENGTH_2018") ::&
capi_33_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "l", "e", "n", "g", "t", &
"h", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_LENGTH_2018%value, &
ATOMIC_UNIT_OF_LENGTH_2018%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MAG_DIPOLE_MOM_2018") ::&
capi_34_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "g", ".", " ", &
"d", "i", "p", "o", "l", "e", " ", "m", "o", "m", &
".", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MAG_DIPOLE_MOM_2018%value, &
ATOMIC_UNIT_OF_MAG_DIPOLE_MOM_2018%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MAG_FLUX_DENSITY_2018") ::&
capi_35_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "g", ".", " ", &
"f", "l", "u", "x", " ", "d", "e", "n", "s", "i", &
"t", "y", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MAG_FLUX_DENSITY_2018%value, &
ATOMIC_UNIT_OF_MAG_FLUX_DENSITY_2018%uncertainty, &
[ &
"T", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MAGNETIZABILITY_2018") ::&
capi_36_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "g", "n", "e", &
"t", "i", "z", "a", "b", "i", "l", "i", "t", "y", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MAGNETIZABILITY_2018%value, &
ATOMIC_UNIT_OF_MAGNETIZABILITY_2018%uncertainty, &
[ &
"J", " ", "T", "^", "-", "2", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MASS_2018") ::&
capi_37_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MASS_2018%value, &
ATOMIC_UNIT_OF_MASS_2018%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MOMENTUM_2018") ::&
capi_38_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "o", "m", "e", "n", &
"t", "u", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MOMENTUM_2018%value, &
ATOMIC_UNIT_OF_MOMENTUM_2018%uncertainty, &
[ &
"k", "g", " ", "m", " ", "s", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_PERMITTIVITY_2018") ::&
capi_39_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "p", "e", "r", "m", "i", &
"t", "t", "i", "v", "i", "t", "y", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_PERMITTIVITY_2018%value, &
ATOMIC_UNIT_OF_PERMITTIVITY_2018%uncertainty, &
[ &
"F", " ", "m", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_TIME_2018") ::&
capi_40_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "t", "i", "m", "e", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_TIME_2018%value, &
ATOMIC_UNIT_OF_TIME_2018%uncertainty, &
[ &
"s", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_VELOCITY_2018") ::&
capi_41_2018 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "v", "e", "l", "o", "c", &
"i", "t", "y", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_VELOCITY_2018%value, &
ATOMIC_UNIT_OF_VELOCITY_2018%uncertainty, &
[ &
"m", " ", "s", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="AVOGADRO_CONSTANT_2018") ::&
capi_42_2018 = capi_constant_type([ &
"A", "v", "o", "g", "a", "d", "r", "o", " ", "c", &
"o", "n", "s", "t", "a", "n", "t", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
AVOGADRO_CONSTANT_2018%value, &
AVOGADRO_CONSTANT_2018%uncertainty, &
[ &
"m", "o", "l", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_2018") ::&
capi_43_2018 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_2018%value, &
BOHR_MAGNETON_2018%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_EV_T_2018") ::&
capi_44_2018 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "e", "V", "/", &
"T", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_EV_T_2018%value, &
BOHR_MAGNETON_IN_EV_T_2018%uncertainty, &
[ &
"e", "V", " ", "T", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_HZ_T_2018") ::&
capi_45_2018 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "H", "z", "/", &
"T", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_HZ_T_2018%value, &
BOHR_MAGNETON_IN_HZ_T_2018%uncertainty, &
[ &
"H", "z", " ", "T", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
